@@ -388,5 +388,15 @@ At start may be set by custom-file"
 	(not py-closing-list-dedents-bos))
   (when (or py-verbose-p (called-interactively-p 'any)) (message "py-closing-list-dedents-bos: %s" py-closing-list-dedents-bos)))
 
+(defun py-toggle-py-register-shell-buffer-p ()
+  "Toggle var py-register-shell-buffer-p.
+
+Valid in current session only.
+At start may be set by custom-file"
+  (interactive)
+  (setq py-register-shell-buffer-p
+	(not py-register-shell-buffer-p))
+  (when (or py-verbose-p (called-interactively-p 'any)) (message "py-register-shell-buffer-p: %s" py-register-shell-buffer-p)))
+
 (provide 'python-components-switches)
 ;;;  python-components-switches.el ends here
